tests/parser/tests/cases/should_fail/missing_comma_in_struct_field/case.stderr
error: Failed to parse
 --> $DIR/case.hash:2:15
1 |   // Create a new dog called viktor! 
2 |   viktor := Dog { 
  |                 ^^
3 |       name = "Viktor",
  |   ^^^^^^^^^^^^^^^^^^^^
4 |       has_brother = true // <--- Error should be reported here since there is no comma....
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |       age = 12, 
  |   ^^^^^^^^^^^^^^
6 |       gender = false
  |   ^^^^^^^^^^^^^^^^^^
7 |   };
  |   ^ here
  = note: Unexpectedly encountered a `{...}`. Consider adding a ';'
